--- a/src/SSDTLifecycleExtension/Windows/ConfigurationWindowControl.xaml
+++ b/src/SSDTLifecycleExtension/Windows/ConfigurationWindowControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SSDTLifecycleExtension.Windows.ConfigurationWindowControl"
+<UserControl x:Class="SSDTLifecycleExtension.Windows.ConfigurationWindowControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -72,6 +72,11 @@
             <Setter Property="Foreground" Value="Navy"/>
         </Style>
         <Style TargetType="imaging:CrispImage" x:Key="HelpCrispImageStyle">
+            <Setter Property="Height" Value="16"/>
+            <Setter Property="Width" Value="16"/>
+        </Style>
+        <Style TargetType="imaging:CrispImage" x:Key="ButtonCrispImageStyle">
+            <Setter Property="Margin" Value="0,0,5,0"/>
             <Setter Property="Height" Value="16"/>
             <Setter Property="Width" Value="16"/>
         </Style>
@@ -235,6 +240,17 @@
         <Style TargetType="Button" x:Key="ActionButtonStyle">
             <Setter Property="Margin" Value="5"/>
             <Setter Property="Padding" Value="10, 5"/>
+        </Style>
+        <Style TargetType="Button" x:Key="SaveButtonStyle" BasedOn="{StaticResource ActionButtonStyle}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsModelDirty}" Value="True">
+                    <DataTrigger.Setters>
+                        <Setter Property="BorderBrush" Value="Red"/>
+                        <Setter Property="BorderThickness" Value="3"/>
+                        <Setter Property="Margin" Value="3"/>
+                    </DataTrigger.Setters>
+                </DataTrigger>
+            </Style.Triggers>
         </Style>
         <Style TargetType="Button" x:Key="HelpButtonStyle">
             <Setter Property="Background" Value="Transparent"/>
@@ -712,11 +728,21 @@
                     HorizontalAlignment="Right"
                     Margin="10,0,10,10">
             <Button Command="{Binding ResetConfigurationToDefaultCommand}"
-                    Style="{StaticResource ActionButtonStyle}"
-                    Content="Reset Configuration to Default"/>
+                        Style="{StaticResource ActionButtonStyle}">
+                    <StackPanel Orientation="Horizontal">
+                        <imaging:CrispImage Style="{StaticResource ButtonCrispImageStyle}"
+                                            Moniker="{x:Static catalog:KnownMonikers.Restart}"/>
+                        <TextBlock Text="Reset configuration to default"/>
+                    </StackPanel>
+                </Button>
             <Button Command="{Binding SaveConfigurationCommand}"
-                    Style="{StaticResource ActionButtonStyle}"
-                    Content="Save Configuration"/>
+                        Style="{StaticResource SaveButtonStyle}">
+                    <StackPanel Orientation="Horizontal">
+                        <imaging:CrispImage Style="{StaticResource ButtonCrispImageStyle}"
+                                            Moniker="{x:Static catalog:KnownMonikers.Save}"/>
+                        <TextBlock Text="Save configuration"/>
+                    </StackPanel>
+                </Button>
         </StackPanel>
     </Grid>
 </UserControl>
