--- a/src/SSDTLifecycleExtension/Windows/ConfigurationWindowControl.xaml
+++ b/src/SSDTLifecycleExtension/Windows/ConfigurationWindowControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="SSDTLifecycleExtension.Windows.ConfigurationWindowControl"
+﻿<UserControl x:Class="SSDTLifecycleExtension.Windows.ConfigurationWindowControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -723,11 +723,30 @@
                    Fill="{DynamicResource {x:Static vsshell:VsBrushes.ToolWindowBorderKey}}"/>
 
         <!-- Actions -->
-        <StackPanel Grid.Row="2"
-                    Orientation="Horizontal"
-                    HorizontalAlignment="Right"
-                    Margin="10,0,10,10">
-            <Button Command="{Binding ResetConfigurationToDefaultCommand}"
+        <Grid Grid.Row="2"
+              Margin="10,0,10,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Grid.Column="0"
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Left">
+                <Button Command="{Binding ImportConfigurationCommand}"
+                        Style="{StaticResource ActionButtonStyle}">
+                    <StackPanel Orientation="Horizontal">
+                        <imaging:CrispImage Style="{StaticResource ButtonCrispImageStyle}"
+                                            Moniker="{x:Static catalog:KnownMonikers.Import}"/>
+                        <TextBlock Text="Import configuration ..."/>
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+
+            <StackPanel Grid.Column="1"
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Right">
+                <Button Command="{Binding ResetConfigurationToDefaultCommand}"
                         Style="{StaticResource ActionButtonStyle}">
                     <StackPanel Orientation="Horizontal">
                         <imaging:CrispImage Style="{StaticResource ButtonCrispImageStyle}"
@@ -735,7 +754,7 @@
                         <TextBlock Text="Reset configuration to default"/>
                     </StackPanel>
                 </Button>
-            <Button Command="{Binding SaveConfigurationCommand}"
+                <Button Command="{Binding SaveConfigurationCommand}"
                         Style="{StaticResource SaveButtonStyle}">
                     <StackPanel Orientation="Horizontal">
                         <imaging:CrispImage Style="{StaticResource ButtonCrispImageStyle}"
@@ -743,6 +762,7 @@
                         <TextBlock Text="Save configuration"/>
                     </StackPanel>
                 </Button>
-        </StackPanel>
+            </StackPanel>
+        </Grid>
     </Grid>
 </UserControl>
